error.log
Error running Simple Unit Test 'P2_MattLyons_26_UnitNotStatic.zip':
/home/matt/NetBeansProjects/Java-Grader/downloads/P2_MattLyons_26_UnitNotStatic/P2_MattLyons_25_UnitTestTest/UnitTest2.java:1: error: class UnitTest1 is public, should be declared in a file named UnitTest1.java
public class UnitTest1{
       ^
1 error

